Reformat code
Co-authored-by: AI